# disptools

./: .appveyor.yml  .gitignore  .ignore  .travis.yml  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.py
.github/workflows/: checks_linux.yaml
cmake/: FindGoogleTest.cmake
cuda/: CMakeLists.txt  device.cu  displacement_field_gradient.cu  displacement_field_greedy.cu  disptools.cu  error.cu  jacobian.cu
cuda/headers/: cuda.cuh  disptools.cuh  error.cuh  generate_displacement.cuh  jacobian.cuh  reduction.cuh
disptools/: __init__.py  displacements.py  drawing.py  io.py  measure.py  predict.py  simulatrophy.py
docs/: genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/modules/: index.html
docs/modules/disptools/: displacements.html  drawing.html  io.html  measure.html  predict.html  simulatrophy.html
docs/sources/: readme.rst.txt
modules/: index.html
modules/disptools/: displacements.html  drawing.html  io.html  measure.html  predict.html  simulatrophy.html
python_c_extension/: CMakeLists.txt  _disptools.c
sources/: index.rst.txt  readme.rst.txt
sphinx/: Makefile  conf.py
sphinx/source/: disptools.rst  modules.rst
sphinx/templates/: footer.html
src/: CMakeLists.txt  README.md  VolumeMatching3D.c  _disptools.c  displacement_field_gradient.c  displacement_field_greedy.c  disptools.c  field.c  jacobian.c  rvf_io.c  shape_descriptors.c  vtk_io.c
src/headers/: VolumeMatching3D.h  displacement_field_gradient.h  displacement_field_greedy.h  disptools.h  error.h  field.h  jacobian.h  jacobian_macros.h  rvf_io.h  shape_descriptors.h  vtk_io.h
src/test/: test_gradient.c  test_greedy.c  test_jacobian.c  test_matching.c  test_rvf.c  test_vtk.c
test/: CMakeLists.txt  test_displacements.py  test_drawing.py  test_io.py  test_measure.py  test_predict.py  test_simulatrophy.py
test/c/: test_jacobian_macros.cpp
